--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "rxjs": "~6.6.0",
+    "@ngrx/effects": "^12.2.0",
+    "@ngrx/store": "^12.2.0",
+    "ag-grid-angular": "^25.3.0",
+    "ag-grid-community": "^25.3.0",
+    "ngrx": "0.0.1-security",
+    "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
