--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@ngrx/component": "^12.2.0",
     "@ngrx/effects": "^12.2.0",
     "@ngrx/store": "^12.2.0",
     "ag-grid-angular": "^25.3.0",
