--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.1",
+    "@angular/cdk": "^12.1.2",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
     "@angular/forms": "~12.1.1",
+    "@angular/material": "^12.1.2",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@ngrx/component": "^12.2.0",
     "@ngrx/effects": "^12.2.0",
     "@ngrx/store": "^12.2.0",
+    "@ngrx/store-devtools": "^12.2.0",
     "ag-grid-angular": "^25.3.0",
     "ag-grid-community": "^25.3.0",
+    "ag-grid-enterprise": "^25.3.0",
     "ngrx": "0.0.1-security",
     "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
